Fix sizing of search dropdown table so that it aligns with parent text box (using max-width was key to fixing the padding offset issue)

--- a/AgencyApp/static/AgencyApp/css/forms.css
+++ b/AgencyApp/static/AgencyApp/css/forms.css
@@ -197,6 +197,13 @@
     outline-width: 0;
 }
 
+.noFocusTextInput{
+
+}
+.noFocusTextInput:focus{
+    outline-width: 0;
+}
+
 
 .form-style-7 input[type="text"]:focus,
 .form-style-7 input[type="date"]:focus,
