--- a/AgencyApp/static/AgencyApp/css/post.css
+++ b/AgencyApp/static/AgencyApp/css/post.css
@@ -392,7 +392,7 @@
 	{
 		z-index: 5;
 		border: 2px solid #DDDDDD;
-		border-top: none;
+		/*border-top: none;*/
 		border-radius: 2px;
 		background: #FFF;
 		max-height: 270px;
